--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -16,6 +16,17 @@
 </head>
 
 <body>
+    <header class="site-header">
+        <nav class="navigation-bar">
+            <div class="nav-wrapper">
+                <a href="" class="brand-logo">Culinary World</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a class="active" href="">Recipes</a></li>
+                    <li><a href="">Add Recipe</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <!-- Import jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
