--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <div class="slider">
     <ul class="slides">
         <li>
@@ -26,6 +27,7 @@
         </li>
     </ul>
 </div>
+{% block content %}
 <div class="container">
     <div class="row">
         <div class="col s12 m6 l3">
@@ -45,3 +47,4 @@
         </div>
     </div>
 </div>
+{% endblock %}
