--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
             </div>
         </nav>
     </header>
+    {% block slider %} {% endblock %}
     <main class="container">
         {% block content %}{% endblock %}
     </main>
