--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block slider %}
 <div class="slider">
     <ul class="slides">
         <li>
@@ -27,6 +28,7 @@
         </li>
     </ul>
 </div>
+{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
