--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,5 +1,85 @@
 {% extends 'base.html' %}
 {% block content %}
 <h3>Add Recipe Details:</h3>
+<div class="row">
+    <form action="" method="POST" class="col s12">
+        <fieldset>
+            <legend>Recipe Details</legend>
+            <div class="row">
+                <div class="input-field col s12 m6">
+                    <input id="recipe_name" name="recipe_name" type="text" class="validate">
+                    <label for="recipe_name">Recipe Name</label>
+                </div>
+
+                <div class="input-field col s12 m6">
+                    <select id="difficulty" name="difficulty" required>
+                        <option value="" disabled selected>Choose The Difficulty</option>
+                        <option value="Easy">Easy</option>
+                        <option value="Medium">Medium</option>
+                        <option value="Hard">Hard</option>
+                    </select>
+                </div>
+
+                <div class="input-field col s12 m6">
+                    <select id="difficulty" name="difficulty" required>
+                        <option value="" disabled selected>Choose The Difficulty</option>
+                        <option value="Easy">Easy</option>
+                        <option value="Medium">Medium</option>
+                        <option value="Hard">Hard</option>
+                    </select>
+                </div>
+
+                <div class="input-field col s12 m6">
+                    <input id="serves" name="serves" type="text" class="validate">
+                    <label for="serves">Serves</label>
+                </div>
+                <div class="input-field col s12 m6">
+                    <input id="prep_time" name="prep_time" type="text" class="validate">
+                    <label for="prep_time">Preparation Time</label>
+                </div>
+                <div class="input-field col s12 m6">
+                    <input id="author" name="author" type="text" class="validate">
+                    <label for="author">Author</label>
+                </div>
+                <div class="input-field col s12 m6">
+                    <input id="image_url" name="image_url" type="text" class="validate">
+                    <label for="image_url">Image URL</label>
+                </div>
+                <div class="input-field col s12 m6">
+                    <textarea id="description" name="description" class="materialize-textarea"></textarea>
+                    <label for="description">Description</label>
+                </div>
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend>Recipe Details</legend>
+            <div class="row">
+                <div class="input-field col s12">
+                    <textarea name="ingredients" id="ingredients" class="materialize-textarea" required></textarea>
+                    <label for="ingredients">Ingredients</label>
+                </div>
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend>Recipe Details</legend>
+            <h6>Method</h6>
+            <div class="row">
+                <div class="input-field col s12">
+                    <textarea name="method_one" id="method_one" class="materialize-textarea" required></textarea>
+                    <label for="icon_prefix">Step One</label>
+                </div>
+            </div>
+        </fieldset>
+        <div class="row">
+            <div class="col s12">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Add Recipe
+                    <i class="material-icons right">playlist_add</i>
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
+
+
 
 {% endblock %}
