--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -7,11 +7,13 @@
             <legend>Recipe Details</legend>
             <div class="row">
                 <div class="input-field col s12 m6">
+                    <i class="material-icons prefix">create</i>
                     <input id="recipe_name" name="recipe_name" type="text" class="validate">
                     <label for="recipe_name">Recipe Name</label>
                 </div>
 
                 <div class="input-field col s12 m6">
+                    <i class="material-icons prefix">location_on</i>
                     <select id="difficulty" name="difficulty" required>
                         <option value="" disabled selected>Choose The Difficulty</option>
                         <option value="Easy">Easy</option>
@@ -21,7 +23,8 @@
                 </div>
 
                 <div class="input-field col s12 m6">
-                    <select id="difficulty" name="difficulty" required>
+                    <i class="material-icons prefix">restaurant_menu</i>
+                    <select id="diff" name="diff" required>
                         <option value="" disabled selected>Choose The Difficulty</option>
                         <option value="Easy">Easy</option>
                         <option value="Medium">Medium</option>
@@ -30,22 +33,27 @@
                 </div>
 
                 <div class="input-field col s12 m6">
+                    <i class="material-icons prefix">people</i>
                     <input id="serves" name="serves" type="text" class="validate">
                     <label for="serves">Serves</label>
                 </div>
                 <div class="input-field col s12 m6">
+                    <i class="material-icons prefix">access_time</i>
                     <input id="prep_time" name="prep_time" type="text" class="validate">
                     <label for="prep_time">Preparation Time</label>
                 </div>
                 <div class="input-field col s12 m6">
+                    <i class="material-icons prefix">person</i>
                     <input id="author" name="author" type="text" class="validate">
                     <label for="author">Author</label>
                 </div>
                 <div class="input-field col s12 m6">
+                    <i class="material-icons prefix">add_a_photo</i>
                     <input id="image_url" name="image_url" type="text" class="validate">
                     <label for="image_url">Image URL</label>
                 </div>
                 <div class="input-field col s12 m6">
+                    <i class="material-icons prefix">assignment</i>
                     <textarea id="description" name="description" class="materialize-textarea"></textarea>
                     <label for="description">Description</label>
                 </div>
@@ -55,6 +63,7 @@
             <legend>Recipe Details</legend>
             <div class="row">
                 <div class="input-field col s12">
+                    <i class="material-icons prefix">shopping_basket</i>
                     <textarea name="ingredients" id="ingredients" class="materialize-textarea" required></textarea>
                     <label for="ingredients">Ingredients</label>
                 </div>
@@ -65,6 +74,7 @@
             <h6>Method</h6>
             <div class="row">
                 <div class="input-field col s12">
+                    <i class="material-icons prefix">list</i>
                     <textarea name="method_one" id="method_one" class="materialize-textarea" required></textarea>
                     <label for="icon_prefix">Step One</label>
                 </div>
