--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -14,17 +14,17 @@
 
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">location_on</i>
-                    <select id="difficulty" name="difficulty" required>
+                    <select id="category" name="cuisine_name" required>
                         <option value="" disabled selected>Choose Cuisine</option>
                         {% for type in cuisine_type %}
-                        <option value="{{ type.cuisine_name }}">{{ type.cuisine_name.capitalize() }} </option>
+                        <option value="{{ type.cuisine_name.capitalize() }}">{{ type.cuisine_name.capitalize() }} </option>
                         {% endfor %}
                     </select>
                 </div>
 
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">restaurant_menu</i>
-                    <select id="diff" name="diff" required>
+                    <select id="difficulty" name="difficulty" required>
                         <option value="" disabled selected>Choose The Difficulty</option>
                         <option value="Easy">Easy</option>
                         <option value="Medium">Medium</option>
