link to view recipe_details added

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -46,7 +46,7 @@
                 <p><i class="material-icons prefix">access_time</i>Time: {{ recipe.prep_time }}</p>
             </div>
             <div class="card-action">
-                <a href="#">This is a link</a>
+                <a href="/recipes/{{ recipe._id }}">This is a link</a>
             </div>
         </div>
     </div>
