basic layout for recipe details added

--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -32,5 +32,41 @@
 
     </div>
 </div>
+<div class="row">
+    <div class="col s12 m4">
+        <div class="row">
+            <h3>Ingredients:</h3>
+            <table>
+                <tbody>
+                    <tr>
+                        <td>1 1/2 Chicken Breast</td>
+                    </tr>
+                    <tr>
+                        <td>3/4 cup Plain Flour</td>
+                    </tr>
+                    <tr>
+                        <td>1 Egg</td>
+                    </tr>
+                    <tr>
+                        <td>2 tbs Starch</td>
+                    </tr>
+                    <tr>
+                        <td>3/4 cup Plain Flour</td>
+                    </tr>
+                    <tr>
+                        <td>3/4 cup Plain Flour</td>
+                    </tr>
+                    <tr>
+                        <td>3/4 cup Plain Flour</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="col s12 m8">
+        <h3>Preparation Steps</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto doloribus eaque incidunt dolores quasi culpa quae perspiciatis, adipisci cum commodi deserunt tempore tempora in blanditiis velit repellendus reiciendis, cumque quisquam!</p>
+    </div>
+</div>
 
 {% endblock %}
