--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col s12 m4">
-        <img src="https://pinchofyum.com/wp-content/uploads/DeLallo-Pizza-1.jpg" class="img-responsive" style="width:300px">
+        <img src="{{ recipes.image_url }}" class="img-responsive" style="width:300px">
     </div>
     <div class="col s12 m8">
         <h1>{{recipes.recipe_name}}</h1>
@@ -27,7 +27,7 @@
             </tbody>
         </table>
         <div class="row">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora soluta quas impedit est fuga, veritatis ut aperiam amet assumenda odio iste qui. Quam illo aspernatur tempore consequuntur libero doloribus maiores.</p>
+            <p>{{ recipes.description }}</p>
         </div>
 
     </div>
@@ -39,7 +39,7 @@
             <table>
                 <tbody>
                     <tr>
-                        <td>1 1/2 Chicken Breast</td>
+                        <td>{{  recipes.ingredients }}</td>
                     </tr>
                     <tr>
                         <td>3/4 cup Plain Flour</td>
@@ -65,7 +65,7 @@
     </div>
     <div class="col s12 m8">
         <h3>Preparation Steps</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto doloribus eaque incidunt dolores quasi culpa quae perspiciatis, adipisci cum commodi deserunt tempore tempora in blanditiis velit repellendus reiciendis, cumque quisquam!</p>
+        <p>{{ recipes.step_one}}</p>
     </div>
 </div>
 
