--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -6,18 +6,18 @@
         <img src="{{ recipes.image_url }}" class="img-responsive" style="width:300px">
     </div>
     <div class="col s12 m8">
-        <h1>{{recipes.recipe_name}}</h1>
-        <p>Added by: {{recipes.author}}</p>
+        <h1>{{ recipes.recipe_name }}</h1>
+        <p>Added by: {{ recipes.author }}</p>
         <div class="row">
             <div class="col s12">
-                <a href="" class="waves-effect waves-light btn">Edit</a> 
+                <a href="{{ url_for('edit_recipe', recipe_id = recipes._id) }}" class="waves-effect waves-light btn">Edit</a> 
                 <a href=""class="waves-effect waves-light btn">Delete</a>
             </div>
         </div>
         <table>
             <tbody>
                 <tr>
-                    <td>Cuisine: {{recipes.cuisine}}</td>
+                    <td>Cuisine: {{ recipes.cuisine_name }}</td>
                     <td>Difficulty: {{ recipes.difficulty}} </td>
                 </tr>
                 <tr>
