--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col s12">
                 <a href="{{ url_for('edit_recipe', recipe_id = recipes._id) }}" class="waves-effect waves-light btn">Edit</a> 
-                <a href=""class="waves-effect waves-light btn">Delete</a>
+                <a href="{{ url_for('delete_recipe', recipe_id = recipes._id) }}" class="waves-effect waves-light btn">Delete</a>
             </div>
         </div>
         <table>
