--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -17,12 +17,12 @@
         <table>
             <tbody>
                 <tr>
-                    <td>Cuisine: {{ recipes.cuisine_name }}</td>
-                    <td>Difficulty: {{ recipes.difficulty}} </td>
+                    <td><i class="material-icons prefix">location_on</i> Cuisine: {{ recipes.cuisine_name }}</td>
+                    <td><i class="material-icons prefix">restaurant_menu</i> Difficulty: {{ recipes.difficulty}} </td>
                 </tr>
                 <tr>
-                    <td>Time: {{ recipes.prep_time }} </td>
-                    <td>Serve: {{ recipes.serves }}</td>
+                    <td><i class="material-icons prefix">access_time</i> Time: {{ recipes.prep_time }} </td>
+                    <td><i class="material-icons prefix">people</i> Serve: {{ recipes.serves }}</td>
                 </tr>
             </tbody>
         </table>
