--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -9,7 +9,8 @@
             <div class="row">
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">create</i>
-                    <input id="recipe_name" name="recipe_name" type="text" class="validate">
+                    <input id="recipe_name" name="recipe_name" type="text" class="validate"
+                        value="{{ recipes.recipe_name }}">
                     <label for="recipe_name">Recipe Name</label>
                 </div>
 
@@ -17,17 +18,23 @@
                     <i class="material-icons prefix">location_on</i>
                     <select id="category" name="cuisine_name" required>
                         <option value="" disabled selected>Choose Cuisine</option>
-                        {% for type in cuisine_type %}
-                        <option value="{{ type.cuisine_name.capitalize() }}">{{ type.cuisine_name.capitalize() }}
+                        {% for type in cousine_type %}
+                        {% if type.cuisine_name == recipes.cuisine_name %}
+                        <option value="{{ type.cuisine_name }}" selected>
+                            {{ type.cuisine_name }}
                         </option>
-                        {% endfor %}
+                        {% else %}
+                        <option value="{{ type.cuisine_name }}">
+                            {{ type.cuisine_name }}
+                            {% endif %}
+                            {% endfor %}
                     </select>
                 </div>
 
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">restaurant_menu</i>
                     <select id="difficulty" name="difficulty" required>
-                        <option value="" disabled selected>Choose The Difficulty</option>
+                        <option value="" disabled selected>Choose Difficulty</option>
                         <option value="Easy">Easy</option>
                         <option value="Medium">Medium</option>
                         <option value="Hard">Hard</option>
@@ -36,27 +43,28 @@
 
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">people</i>
-                    <input id="serves" name="serves" type="text" class="validate">
+                    <input id="serves" name="serves" type="text" class="validate" value="{{ recipes.serves }}">
                     <label for="serves">Serves</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">access_time</i>
-                    <input id="prep_time" name="prep_time" type="text" class="validate">
+                    <input id="prep_time" name="prep_time" type="text" class="validate" value="{{ recipes.prep_time }}">
                     <label for="prep_time">Preparation Time</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">person</i>
-                    <input id="author" name="author" type="text" class="validate">
+                    <input id="author" name="author" type="text" class="validate" value="{{ recipes.author }}">
                     <label for="author">Author</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">add_a_photo</i>
-                    <input id="image_url" name="image_url" type="text" class="validate">
+                    <input id="image_url" name="image_url" type="text" class="validate" value="{{recipes.image_url }}">
                     <label for="image_url">Image URL</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">assignment</i>
-                    <textarea id="description" name="description" class="materialize-textarea"></textarea>
+                    <textarea id="description" name="description"
+                        class="materialize-textarea"> {{ recipes.description }}</textarea>
                     <label for="description">Description</label>
                 </div>
             </div>
@@ -66,7 +74,8 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">shopping_basket</i>
-                    <textarea name="ingredients" id="ingredients" class="materialize-textarea" required></textarea>
+                    <textarea name="ingredients" id="ingredients" class="materialize-textarea"
+                        required>{{ recipes.ingredients }}</textarea>
                     <label for="ingredients">Ingredients</label>
                 </div>
             </div>
@@ -76,7 +85,8 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">list</i>
-                    <textarea name="method_one" id="method_one" class="materialize-textarea" required></textarea>
+                    <textarea name="step_one" id="step_one" class="materialize-textarea"
+                        required>{{ recipes.step_one }}</textarea>
                     <label for="icon_prefix">Step One</label>
                 </div>
             </div>
