--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -4,14 +4,19 @@
 <div class="row">
     <div class="col s12 m4">
         <img src="{{ recipes.image_url }}" class="img-responsive" style="width:300px">
+        <div class="col s12 m4">
+            <button class="print" onclick="printRecipe()"><i class="material-icons prefix">print</i></button>
+        </div>
     </div>
     <div class="col s12 m8">
         <h1>{{ recipes.recipe_name }}</h1>
         <p>Added by: {{ recipes.author }}</p>
         <div class="row">
             <div class="col s12">
-                <a href="{{ url_for('edit_recipe', recipe_id = recipes._id) }}" class="waves-effect waves-light btn">Edit</a> 
-                <a href="{{ url_for('delete_recipe', recipe_id = recipes._id) }}" class="waves-effect waves-light btn">Delete</a>
+                <a href="{{ url_for('edit_recipe', recipe_id = recipes._id) }}"
+                    class="waves-effect waves-light btn">Edit</a>
+                <a href="{{ url_for('delete_recipe', recipe_id = recipes._id) }}"
+                    class="waves-effect waves-light btn">Delete</a>
             </div>
         </div>
         <table>
@@ -69,4 +74,10 @@
     </div>
 </div>
 
+
+<script>
+    function printRecipe() {
+        window.print();
+    }
+</script>
 {% endblock %}
