--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -15,8 +15,19 @@
             <div class="col s12">
                 <a href="{{ url_for('edit_recipe', recipe_id = recipes._id) }}"
                     class="waves-effect waves-light btn">Edit</a>
-                <a href="{{ url_for('delete_recipe', recipe_id = recipes._id) }}"
-                    class="waves-effect waves-light btn">Delete</a>
+                <a href="#modal_confirm" class="waves-effect waves-light btn modal-trigger">Delete</a>
+                <!-- Modal Structure -->
+                <div id="modal_confirm" class="modal">
+                    <div class="modal-content">
+                        <h3>{{ recipes.recipe_name }}</h3>
+                        <p>Do you want to delete this recipe? </p>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="{{ url_for('delete_recipe', recipe_id = recipes._id) }}" class="modal-close waves-effect waves-green btn-flat">Delete<i class = "material-icons right">delete_forever</i></a>
+                        <a href="#!" class="waves-effect waves-light btn-small modal-close">Cancel
+                            <i class = "material-icons right">cancel</i></a>
+                    </div>
+                </div>
             </div>
         </div>
         <table>
@@ -74,10 +85,4 @@
     </div>
 </div>
 
-
-<script>
-    function printRecipe() {
-        window.print();
-    }
-</script>
 {% endblock %}
