--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -23,9 +23,11 @@
                         <p>Do you want to delete this recipe? </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="{{ url_for('delete_recipe', recipe_id = recipes._id) }}" class="modal-close waves-effect waves-green btn-flat">Delete<i class = "material-icons right">delete_forever</i></a>
+                        <a href="{{ url_for('delete_recipe', recipe_id = recipes._id) }}"
+                            class="modal-close waves-effect waves-green btn-flat">Delete<i
+                                class="material-icons right">delete_forever</i></a>
                         <a href="#!" class="waves-effect waves-light btn-small modal-close">Cancel
-                            <i class = "material-icons right">cancel</i></a>
+                            <i class="material-icons right">cancel</i></a>
                     </div>
                 </div>
             </div>
