db collection name correction

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -15,7 +15,7 @@
 
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">location_on</i>
-                    <select id="category" name="c_type" required>
+                    <select id="category" name="cuisine_name" required>
                         <option value="" disabled selected>Choose Cuisine</option>
                         {% for type in cuisine_type %}
                         <option value="{{ type.c_type }}">{{ type.c_type }}
