input field changed to textarea

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,16 +63,16 @@
             /*removes last input element from ingredientsform*/
             $(".delete-last-field").on("click", function () {
                 $("#items input:last").remove();
-            });
+            }); 
 
             /* Dynamically add new input field to form*/
             $(".add-step").on("click", function () {
-                $('<input type="text" class="validate" name="method" id="method" placeholder="Add next step" required >').insertBefore(".add-step");
+                $('<textarea name="method" id="method" class="materialize-textarea" placeholder="Add next step" required ></textarea>').insertBefore(".add-step");
             });
 
             /*removes last input element from form*/
             $(".delete-last-step").on("click", function () {
-                $("#steps input:last").remove();
+                $("#steps textarea:last").remove();
             });
         });
     </script>
