--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="input-field col s12" id="steps">
                     <i class="material-icons prefix">list</i>
-                    <input name="method" id="method" class="validate" required>
+                    <textarea name="method" id="method" class="materialize-textarea" required></textarea>
                     <a class="waves-effect waves-light btn-small add-step">Add Step</a>
 					<a class="waves-effect waves-light btn-small delete-last-step">Delete Last</a>
                 </div>
