--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -103,6 +103,7 @@
                 <button class="btn waves-effect waves-light" type="submit">Update Recipe
                     <i class="material-icons right">playlist_add</i>
                 </button>
+                <a href="{{ url_for('recipe_details', recipe_id=recipe_id ) }}" class="btn waves-effect waves-light">Cancel</a>
             </div>
         </div>
     </form>
