--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -88,6 +88,7 @@
                 <button class="btn waves-effect waves-light" type="submit" name="action">Add Recipe
                     <i class="material-icons right">playlist_add</i>
                 </button>
+                <a href="{{ url_for('all_recipes') }}" class="btn waves-effect waves-light">Cancel</a>
             </div>
         </div>
     </form>
