--- a/templates/registration.html
+++ b/templates/registration.html
@@ -3,6 +3,7 @@
 
 <div class="row">
     <div class="col s12 l4 offset-l4 ">
+        <h4>Registration</h4>
         <form action="{{ url_for('register') }}" method=POST>
             <div class="input-field col s12">
                 <i class="material-icons prefix">assignment</i>
