--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col s12 l4 offset-l4 ">
         <h4>Login</h4>
-        <form action="{{ url_for('register') }}" method=POST>
+        <form action="{{ url_for('login') }}" method=POST>
             <div class="input-field col s12">
                 <i class="material-icons prefix">assignment</i>
                 <input id="username" name="username" type="text" class="validate" required maxlength="15">
